# SystemdManager

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASE.md  build.py  conftest.py  pyproject.toml  requirements.txt  run_btop.sh  setup.py
.github/workflows/: build.yml  release.yml
script/: build_and_extract.sh  create_release_package.sh
src/: __init__.py  main.py
src/cli/: cli_controller.py  cli_translations.py
src/gui/: __init__.py  app.py  gui_controller.py
src/gui/dialogs/: __init__.py  confirm_dialog.py  edit_service_dialog.py  error_details_dialog.py  logs_dialog.py  service_dialog.py
src/gui/frames/: __init__.py  service_creation.py  service_list.py  system_logs.py
src/gui/utils/: __init__.py  notification.py  service_validator.py
src/i18n/: __init__.py  translations.py
src/i18n/locale/en/LC_MESSAGES/: messages.po
src/i18n/locale/fr/LC_MESSAGES/: messages.po
src/models/: screen.py  service_model.py
src/utils/: banner.py
tests/: conftest.py  test_cli_controller.py  test_json_persistence.py  test_screen_integration.py  test_service_model.py  test_systemd_generation.py
