[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "systemd-manager"
version = "0.1.0"
description = "Un gestionnaire de services systemd avec interface CLI et GUI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Sebdev43" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Environment :: X11 Applications :: Qt",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "PyQt6>=6.6.1",
    "questionary>=2.0.1",
    "customtkinter>=5.2.2",
    "python-i18n>=0.3.9",
    "psutil>=5.9.8",
    "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "mypy>=1.8",
    "ruff>=0.6",
    "pyinstaller>=6.3",
]

[project.scripts]
systemd-manager = "src.main:main"

[project.urls]
Homepage = "https://github.com/Sebdev43/SystemdManager"

# Development dependency group (PEP 735) — used natively by `uv sync`.
[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "mypy>=1.8",
    "ruff>=0.6",
    "pyinstaller>=6.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# pycodestyle errors (E), Pyflakes (F), import sorting (I).
select = ["E", "F", "I"]
# Long lines are dominated by translation strings that cannot be wrapped.
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
