[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "systemd-manager"
version = "1.1.0"
description = "Un gestionnaire de services systemd avec interface CLI et GUI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Sebdev43" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Environment :: X11 Applications :: Qt",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "PyQt6>=6.11.0",
    "questionary>=2.1.1",
    "customtkinter>=5.2.2",
    "python-i18n>=0.3.9",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.0",
    "pytest-mock>=3.14",
    "mypy>=1.13",
    "ruff>=0.8",
    "pyinstaller>=6.21",
]

[project.scripts]
systemd-manager = "src.main:main"

[project.urls]
Homepage = "https://github.com/Sebdev43/SystemdManager"

# Development dependency group (PEP 735) — used natively by `uv sync`.
[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.0",
    "pytest-mock>=3.14",
    "mypy>=1.13",
    "ruff>=0.8",
    "pyinstaller>=6.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# pycodestyle errors (E), Pyflakes (F), import sorting (I).
select = ["E", "F", "I"]
# Long lines are dominated by translation strings that cannot be wrapped.
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
